#44 improvements to unit testing around the recent improvements.